# hybrid-quantum-protein-folding

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-colab.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  comprehensive-ci.yml  release.yml
config/: basic.json  idr_benchmark.json  quantum_hardware.json
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  PUBLICATION_CHECKLIST.md  QUICKSTART.md
examples/: benchmark_idrs.py  inference_demo.py  train_basic.py
hqpf/: __init__.py
hqpf/data/: __init__.py  benchmarks.py  dataset.py
hqpf/models/: __init__.py  hybrid_model.py  quantum_hamiltonian.py  structure_generator.py  surrogate.py  vqe_solver.py
hqpf/training/: __init__.py  trainer.py
notebooks/: COLAB_INSTRUCTIONS.md  advanced_analysis.ipynb  colab_quickstart.ipynb  quantum_circuits.ipynb  tutorial.ipynb
tests/: __init__.py
tests/benchmarks/: test_performance.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_hybrid_model.py  test_structure_generator.py  test_vqe_solver.py
